More tidying up to ensure user friendlyness

--- a/index.html
+++ b/index.html
@@ -90,16 +90,17 @@
             <details class="bg-white p-4 rounded-lg shadow-sm">
                 <summary class="flex justify-between items-center cursor-pointer font-medium text-stone-900">
                     Why do I need to complete a Trainer Matrix?
-                    <span class="arrow text-teal-600">▼</span>
+                    <span class="arrow text-bca-gold">▼</span>
                 </summary>
                 <div class="mt-4 text-stone-600 space-y-2">
-                    <p>The Australian Skills Quality Authority (ASQA) requires RTOs to ensure training and assessment are delivered by persons who demonstrate vocational competencies, current industry skills, and current VET knowledge. This matrix is a critical tool for Barrington College Australia to document and verify that our trainers meet these rigorous requirements under the 2025 Standards.</p>
+                    <p>The Australian Skills Quality Authority (ASQA) requires RTOs to ensure training and assessment are delivered by persons who demonstrate vocational competencies, current industry skills, and current VET knowledge.
+                    <p>This matrix is a critical tool for Barrington College Australia to document and verify that our trainers meet these rigorous requirements under the 2025 Standards.</p>
                 </div>
             </details>
             <details class="bg-white p-4 rounded-lg shadow-sm">
                 <summary class="flex justify-between items-center cursor-pointer font-medium text-stone-900">
                     How do I complete this interactive matrix?
-                    <span class="arrow text-teal-600">▼</span>
+                    <span class="arrow text-bca-gold">▼</span>
                 </summary>
                 <div class="mt-4 text-stone-600 space-y-2">
                     <p><strong>1. Review each section:</strong> Navigate using the links in the header.</p>
@@ -113,13 +114,13 @@
                 <details class="bg-white p-4 rounded-lg shadow-sm">
                     <summary class="flex justify-between items-center cursor-pointer font-medium text-stone-900">
                         How do I save to Google Drive?
-                        <span class="arrow text-teal-600">▼</span>
+                        <span class="arrow text-bca-gold">▼</span>
                     </summary>
                     <div class="mt-4 text-stone-600 space-y-2">
-                        <p>1. Click "Sign in & Authorize" in the header and follow the prompts from Google.</p>
+                        <p>1. Click <strong>"Sign in & Authorize"</strong> in the header and follow the prompts from Google.</p>
                         <p>2. Complete the form below.</p>
-                        <p>3. Click "Finalise & Export", and then "Save to Google Drive".
-                        <p>The completed PDF will be saved directly to the "My Drive" section of your Google Drive.</p>
+                        <p>3. Click <strong>"Finalise & Export"</strong>, and then <strong>"Save to Google Drive"</strong>.
+                        <p>The completed PDF will be saved directly to the <strong>"My Drive"</strong> section of your <strong>Google Drive</strong>.</p>
                     </div>
                 </details>
             </div>
@@ -133,19 +134,19 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div>
                     <label for="trainerName" class="block text-sm font-medium text-stone-700">Trainer Name</label>
-                    <input type="text" id="trainerName" class="mt-1 block w-full rounded-md border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500">
+                    <input type="text" id="trainerName" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500">
                 </div>
                 <div>
                     <label for="trainerDate" class="block text-sm font-medium text-stone-700">Date</label>
-                    <input type="date" id="trainerDate" class="mt-1 block w-full rounded-md border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500">
+                    <input type="date" id="trainerDate" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500">
                 </div>
                 <div>
                     <label for="trainerEmail" class="block text-sm font-medium text-stone-700">Email Address</label>
-                    <input type="email" id="trainerEmail" class="mt-1 block w-full rounded-md border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500">
+                    <input type="email" id="trainerEmail" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500">
                 </div>
                 <div>
                     <label for="trainerPhone" class="block text-sm font-medium text-stone-700">Phone Number</label>
-                    <input type="tel" id="trainerPhone" class="mt-1 block w-full rounded-md border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500">
+                    <input type="tel" id="trainerPhone" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500">
                 </div>
             </div>
             <hr class="my-8">
@@ -182,7 +183,7 @@
             <h3 class="text-xl font-semibold text-stone-800 mb-4">5. Trainer Reflective Statement</h3>
             <div>
                 <label for="reflective-statement" class="block text-sm font-medium text-stone-700">Based on your self-assessment, identify any areas for your own future professional development to further enhance your training and assessment practice.</label>
-                <textarea id="reflective-statement" rows="4" class="mt-1 block w-full rounded-md border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500"></textarea>
+                <textarea id="reflective-statement" rows="4" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500"></textarea>
             </div>
         </div>
     </section>
@@ -225,30 +226,30 @@
 
 <template id="unit-card-template">
     <div class="bg-white p-6 rounded-lg shadow-sm unit-card">
-        <div class="flex justify-between items-start"><input type="text" placeholder="Unit Code and Name, e.g., BSBXCM401" class="unit-title text-lg font-semibold text-stone-800 w-full focus:outline-none bg-transparent"><button class="text-stone-400 hover:text-red-500 remove-unit-button">&times; Remove</button></div><hr class="my-4">
+        <div class="flex justify-between items-start"><input type="text" placeholder="Unit Code and Name, e.g., BSBXCM401" class="unit-title text-lg font-semibold text-stone-800 w-full focus:focus:border-bca-gold bg-transparent"><button class="text-stone-400 hover:text-red-500 remove-unit-button">&times; Remove</button></div><hr class="my-4">
         <div class="space-y-6">
-            <div><h4 class="font-semibold text-stone-800">1. Evidence of Vocational Competency</h4><textarea rows="3" class="voc-comp-evidence mt-1 block w-full rounded-md border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" placeholder="e.g., I hold this unit of competency..."></textarea></div>
-            <div><h4 class="font-semibold text-stone-800">2. Confirmation of Current Industry Skills</h4><textarea rows="3" class="ind-skills-evidence mt-1 block w-full rounded-md border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" placeholder="Explain how recent industry engagement keeps you current..."></textarea></div>
-            <div><h4 class="font-semibold text-stone-800">3. Confirmation of Current VET Knowledge & Skills</h4><textarea rows="3" class="vet-skills-evidence mt-1 block w-full rounded-md border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" placeholder="Explain how recent VET PD has been applied..."></textarea></div>
+            <div><h4 class="font-semibold text-stone-800">1. Evidence of Vocational Competency</h4><textarea rows="3" class="voc-comp-evidence mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" placeholder="e.g., I hold this unit of competency..."></textarea></div>
+            <div><h4 class="font-semibold text-stone-800">2. Confirmation of Current Industry Skills</h4><textarea rows="3" class="ind-skills-evidence mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" placeholder="Explain how recent industry engagement keeps you current..."></textarea></div>
+            <div><h4 class="font-semibold text-stone-800">3. Confirmation of Current VET Knowledge & Skills</h4><textarea rows="3" class="vet-skills-evidence mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" placeholder="Explain how recent VET PD has been applied..."></textarea></div>
         </div>
     </div>
 </template>
 
 <template id="table-row-template">
     <tr>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="w-full bg-transparent focus:outline-none p-1"></td>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="w-full bg-transparent focus:outline-none p-1"></td>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="w-full bg-transparent focus:outline-none p-1" placeholder="e.g., Jan 2022 - Dec 2023"></td>
+        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold"></td>
+        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold"></td>
+        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" placeholder="e.g., Jan 2022 - Dec 2023"></td>
         <td class="p-2 border-b border-stone-200 text-center"><button class="text-stone-400 hover:text-red-500 remove-row-button">&times;</button></td>
     </tr>
 </template>
 
 <template id="table-row-template-wide">
     <tr>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="w-full bg-transparent focus:outline-none p-1"></td>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="w-full bg-transparent focus:outline-none p-1"></td>
-        <td class="p-2 border-b border-stone-200"><input type="date" class="w-full bg-transparent focus:outline-none p-1"></td>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="w-full bg-transparent focus:outline-none p-1"></td>
+        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold"></td>
+        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold"></td>
+        <td class="p-2 border-b border-stone-200"><input type="date" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold"></td>
+        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold"></td>
         <td class="p-2 border-b border-stone-200 text-center"><button class="text-stone-400 hover:text-red-500 remove-row-button">&times;</button></td>
     </tr>
 </template>
