Fixed page margins when exporting to pdf

--- a/index.html
+++ b/index.html
@@ -461,21 +461,34 @@
             html2canvas(element, { scale: 2, useCORS: true }).then(canvas => {
                 const imgData = canvas.toDataURL('image/png');
                 const pdf = new jsPDF('p', 'mm', 'a4');
+
+                // Define Margin in mm
+                const margin = 15;
                 const pdfWidth = pdf.internal.pageSize.getWidth();
                 const pageHeight = pdf.internal.pageSize.getHeight();
+
+                // Calculate the usable width
+                const usableWidth = pdfWidth - (margin * 2);
+
                 const imgWidth = canvas.width;
                 const imgHeight = canvas.height;
                 const ratio = imgWidth / imgHeight;
-                let imgHeightOnPage = pdfWidth / ratio;
+
+                // Calculate image height based on usable width
+                let imgHeightOnPage = usableWidth / ratio;
+
                 let position = 0;
 
-                pdf.addImage(imgData, 'PNG', 0, position, pdfWidth, imgHeightOnPage);
-                let heightLeft = imgHeightOnPage - pageHeight;
+                // Update the addImage() call
+                // This sets the left and top margins for the first page
+                pdf.addImage(imgData, 'PNG', margin, margin, usableWidth, imgHeightOnPage);
+
+                let heightLeft = imgHeightOnPage - (pageHeight - margin);
 
                 while (heightLeft > 0) {
                     position -= pageHeight;
                     pdf.addPage();
-                    pdf.addImage(imgData, 'PNG', 0, position, pdfWidth, imgHeightOnPage);
+                    pdf.addImage(imgData, 'PNG',margin, position + margin, usableWidth, imgHeightOnPage);
                     heightLeft -= pageHeight;
                 }
                 callback(pdf.output('blob'));
