--- a/index.html
+++ b/index.html
@@ -133,30 +133,30 @@
         <div class="bg-white p-6 mt-8 rounded-lg shadow-sm">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div>
-                    <label for="trainerName" class="block text-sm font-medium text-stone-700">Trainer Name</label>
-                    <input type="text" id="trainerName" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500">
+                    <label for="trainerName" class="block text-sm font-medium text-stone-700" >Trainer Name</label>
+                    <input type="text" id="trainerName" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" data-save>
                 </div>
                 <div>
                     <label for="trainerDate" class="block text-sm font-medium text-stone-700">Date</label>
-                    <input type="date" id="trainerDate" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500">
+                    <input type="date" id="trainerDate" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" data-save>
                 </div>
                 <div>
                     <label for="trainerEmail" class="block text-sm font-medium text-stone-700">Email Address</label>
-                    <input type="email" id="trainerEmail" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500">
+                    <input type="email" id="trainerEmail" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" data-save>
                 </div>
                 <div>
                     <label for="trainerPhone" class="block text-sm font-medium text-stone-700">Phone Number</label>
-                    <input type="tel" id="trainerPhone" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500">
+                    <input type="tel" id="trainerPhone" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" data-save>
                 </div>
             </div>
             <hr class="my-8">
             <h3 class="text-xl font-semibold text-stone-800 mb-4">1. Trainer/Assessor Credentials</h3>
             <div id="credentials-container" class="space-y-2">
-                <div class="border border-stone-200 rounded-md p-3"><label class="flex items-center space-x-3"><input type="checkbox" name="credential" class="h-4 w-4 text-teal-600 border-stone-300 focus:ring-teal-500" value="TAE40122"><span class="font-medium">TAE40122 Certificate IV in Training and Assessment or its successor.</span></label></div>
-                <div class="border border-stone-200 rounded-md p-3"><label class="flex items-center space-x-3"><input type="checkbox" name="credential" class="h-4 w-4 text-teal-600 border-stone-300 focus:ring-teal-500" value="TAE40116"><span class="font-medium">TAE40116 Certificate IV in Training and Assessment.</span></label></div>
-                <div class="border border-stone-200 rounded-md p-3"><label class="flex items-center space-x-3"><input type="checkbox" name="credential" class="h-4 w-4 text-teal-600 border-stone-300 focus:ring-teal-500" value="TAE40110"><span class="font-medium">TAE40110 Certificate IV plus required gap units.</span></label></div>
-                <div class="border border-stone-200 rounded-md p-3"><label class="flex items-center space-x-3"><input type="checkbox" name="credential" class="h-4 w-4 text-teal-600 border-stone-300 focus:ring-teal-500" value="Diploma"><span class="font-medium">Diploma or higher-level qualification in adult education or VET.</span></label></div>
-                <div class="border border-stone-200 rounded-md p-3"><label class="flex items-center space-x-3"><input type="checkbox" name="credential" class="h-4 w-4 text-teal-600 border-stone-300 focus:ring-teal-500" value="Secondary"><span class="font-medium">Secondary teaching qualification plus a required VET skill set.</span></label></div>
+                <div class="border border-stone-200 rounded-md p-3"><label class="flex items-center space-x-3"><input type="checkbox" name="credential" class="h-4 w-4 text-teal-600 border-stone-300 focus:ring-teal-500" value="TAE40122" data-save><span class="font-medium">TAE40122 Certificate IV in Training and Assessment or its successor.</span></label></div>
+                <div class="border border-stone-200 rounded-md p-3"><label class="flex items-center space-x-3"><input type="checkbox" name="credential" class="h-4 w-4 text-teal-600 border-stone-300 focus:ring-teal-500" value="TAE40116" data-save><span class="font-medium">TAE40116 Certificate IV in Training and Assessment.</span></label></div>
+                <div class="border border-stone-200 rounded-md p-3"><label class="flex items-center space-x-3"><input type="checkbox" name="credential" class="h-4 w-4 text-teal-600 border-stone-300 focus:ring-teal-500" value="TAE40110" data-save><span class="font-medium">TAE40110 Certificate IV plus required gap units.</span></label></div>
+                <div class="border border-stone-200 rounded-md p-3"><label class="flex items-center space-x-3"><input type="checkbox" name="credential" class="h-4 w-4 text-teal-600 border-stone-300 focus:ring-teal-500" value="Diploma" data-save><span class="font-medium">Diploma or higher-level qualification in adult education or VET.</span></label></div>
+                <div class="border border-stone-200 rounded-md p-3"><label class="flex items-center space-x-3"><input type="checkbox" name="credential" class="h-4 w-4 text-teal-600 border-stone-300 focus:ring-teal-500" value="Secondary" data-save><span class="font-medium">Secondary teaching qualification plus a required VET skill set.</span></label></div>
             </div>
             <hr class="my-8">
             <h3 class="text-xl font-semibold text-stone-800 mb-4">2. Vocational Qualifications & Industry Experience</h3>
@@ -166,9 +166,9 @@
             <div class="mt-6 overflow-x-auto">
                 <table class="w-full">
                     <thead class="bg-stone-50"><tr><th class="p-3 text-left text-sm font-semibold text-stone-600">Role / Position</th><th class="p-3 text-left text-sm font-semibold text-stone-600">Employer</th><th class="p-3 text-left text-sm font-semibold text-stone-600">Duration</th><th class="p-3"></th></tr></thead>
-                    <tbody id="experience-body"></tbody>
+                    <tbody id="experience-body" ></tbody>
                 </table>
-                <button id="add-experience" class="mt-2 text-sm text-bca-gold hover:text-opacity-80 font-medium">+ Add Industry Experience</button></div>
+                <button id="add-experience" class="mt-2 text-sm text-bca-gold hover:text-opacity-80 font-medium" >+ Add Industry Experience</button></div>
             <hr class="my-8">
             <h3 class="text-xl font-semibold text-stone-800 mb-4">3. Ongoing Industry Engagement & Currency</h3>
             <div class="overflow-x-auto"><table class="w-full">
@@ -178,12 +178,12 @@
             <h3 class="text-xl font-semibold text-stone-800 mb-4">4. VET Professional Development</h3>
             <div class="overflow-x-auto"><table class="w-full">
                 <thead class="bg-stone-50"><tr><th class="p-3 text-left text-sm font-semibold text-stone-600">Activity Type</th><th class="p-3 text-left text-sm font-semibold text-stone-600">Description</th><th class="p-3 text-left text-sm font-semibold text-stone-600">Date(s)</th><th class="p-3 text-left text-sm font-semibold text-stone-600">Impact on VET Practice</th><th class="p-3"></th></tr></thead>
-                <tbody id="vet-pd-body"></tbody></table><button id="add-vet-pd" class="mt-2 text-sm text-bca-gold hover:text-opacity-80 font-medium">+ Add VET PD Activity</button></div>
+                <tbody id="vet-pd-body"></tbody></table><button id="add-vet-pd" class="mt-2 text-sm text-bca-gold hover:text-opacity-80 font-medium" data-save>+ Add VET PD Activity</button></div>
             <hr class="my-8">
             <h3 class="text-xl font-semibold text-stone-800 mb-4">5. Trainer Reflective Statement</h3>
             <div>
                 <label for="reflective-statement" class="block text-sm font-medium text-stone-700">Based on your self-assessment, identify any areas for your own future professional development to further enhance your training and assessment practice.</label>
-                <textarea id="reflective-statement" rows="4" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500"></textarea>
+                <textarea id="reflective-statement" rows="4" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" data-save></textarea>
             </div>
         </div>
     </section>
@@ -192,14 +192,16 @@
     <section id="part-b" class="mb-12 scroll-mt-20">
         <h2 class="text-3xl font-bold font-spartan tracking-tight text-stone-900 mb-2">Part B: Unit of Competency Mapping</h2>
         <div id="unit-mapping-container" class="space-y-6 mt-8"></div>
-        <div class="mt-6"><button id="add-unit-button" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-bca-red hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">+ Add Unit of Competency</button></div>
+        <div class="mt-6"><button id="add-unit-button" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-bca-red hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500" data-save>+ Add Unit of Competency</button></div>
     </section>
 </main>
 
 <!-- Footer Action Bar -->
 <footer class="sticky bottom-0 bg-white/90 backdrop-blur-sm z-30">
-    <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-3 border-t border-stone-200 text-right">
-        <button id="finalise-button" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-bca-red hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">Finalise & Export</button>
+    <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-3 border-t border-stone-200 flex justify-end items-center space-x-4">
+        <p id="save-status" class="text-sm text-gray-500 mr-auto"></p>
+        <button id="save-progress-button" class="px-4 py-2 border border-stone-300 text-sm font-medium rounded-md text-stone-700 bg-white hover:bg-stone-50">Save Progress</button>
+        <button id="finalise-button" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-bca-red hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-bca-gold">Finalise & Export</button>
     </div>
 </footer>
 
@@ -236,26 +238,118 @@
 </template>
 
 <template id="table-row-template">
-    <tr>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold"></td>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold"></td>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" placeholder="e.g., Jan 2022 - Dec 2023"></td>
+    <tr data-save-group>
+        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></td>
+        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></td>
+        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" placeholder="e.g., Jan 2022 - Dec 2023" data-save></td>
         <td class="p-2 border-b border-stone-200 text-center"><button class="text-stone-400 hover:text-red-500 remove-row-button">&times;</button></td>
     </tr>
 </template>
 
 <template id="table-row-template-wide">
-    <tr>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold"></td>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold"></td>
-        <td class="p-2 border-b border-stone-200"><input type="date" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold"></td>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold"></td>
+    <tr data-save-group>
+        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></td>
+        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></td>
+        <td class="p-2 border-b border-stone-200"><input type="date" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></td>
+        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></td>
         <td class="p-2 border-b border-stone-200 text-center"><button class="text-stone-400 hover:text-red-500 remove-row-button">&times;</button></td>
     </tr>
 </template>
 
 <script>
     document.addEventListener('DOMContentLoaded', () => {
+        const saveProgressButton = document.getElementById('save-progress-button');
+        const saveStatus = document.getElementById('save-status');
+
+        function getFormState() {
+            const state = { staticFields: {}, tables: {}, unitCards: [] };
+            document.querySelectorAll('[data-save]').forEach(el => {
+                const id = el.id || el.name;
+                if (el.type === 'radio' || el.type === 'checkbox') {
+                    if (!state.staticFields[id]) state.staticFields[id] = [];
+                    if(el.checked) state.staticFields[id].push(el.value);
+                } else {
+                    state.staticFields[id] = el.value;
+                }
+            });
+            document.querySelectorAll('tbody[id]').forEach(tbody => {
+                const tableId = tbody.id;
+                state.tables[tableId] = [];
+                tbody.querySelectorAll('tr[data-save-group]').forEach(row => {
+                    const rowData = Array.from(row.querySelectorAll('[data-save]')).map(input => input.value);
+                    state.tables[tableId].push(rowData);
+                });
+            });
+            document.querySelectorAll('.unit-card[data-save-group]').forEach(card => {
+                const cardData = Array.from(card.querySelectorAll('[data-save]')).map(input => input.value);
+                state.unitCards.push(cardData);
+            });
+            return state;
+        }
+
+        function saveStateToBrowser() {
+            const state = getFormState();
+            localStorage.setItem('trainerMatrixProgress', JSON.stringify(state));
+            saveStatus.textContent = 'Progress Saved!';
+            setTimeout(() => { saveStatus.textContent = ''; }, 3000);
+        }
+
+        function loadState() {
+            const savedStateJSON = localStorage.getItem('trainerMatrixProgress');
+            if (!savedStateJSON) return;
+
+            const state = JSON.parse(savedStateJSON);
+
+            if (state.staticFields) {
+                for (const id in state.staticFields) {
+                    const value = state.staticFields[id];
+                    if (Array.isArray(value)) {
+                        document.querySelectorAll(`[name="${id}"]`).forEach(el => el.checked = false);
+                        value.forEach(val => {
+                            const el = document.querySelector(`[name="${id}"][value="${val}"]`);
+                            if (el) el.checked = true;
+                        });
+                    } else {
+                        const el = document.getElementById(id) || document.querySelector(`[name="${id}"][value="${value}"]`);
+                        if(el) {
+                            if (el.type === 'radio') el.checked = true;
+                            else el.value = value;
+                        }
+                    }
+                }
+            }
+            if (state.tables) {
+                for(const tableId in state.tables) {
+                    const tbody = document.getElementById(tableId);
+                    if (!tbody) continue;
+                    const templateId = tbody.closest('table').nextElementSibling.id.includes('wide') ? 'table-row-template-wide' : 'table-row-template';
+                    const template = document.getElementById(templateId);
+
+                    state.tables[tableId].forEach(rowData => {
+                        const newRow = template.content.cloneNode(true);
+                        newRow.querySelectorAll('[data-save]').forEach((input, index) => {
+                            input.value = rowData[index] || '';
+                        });
+                        tbody.appendChild(newRow);
+                    });
+                }
+            }
+            if (state.unitCards) {
+                const unitContainer = document.getElementById('unit-mapping-container');
+                const cardTemplate = document.getElementById('unit-card-template');
+                state.unitCards.forEach(cardData => {
+                    const newCard = cardTemplate.content.cloneNode(true);
+                    newCard.querySelectorAll('[data-save]').forEach((input, index) => {
+                        input.value = cardData[index] || '';
+                    });
+                    unitContainer.appendChild(newCard);
+                });
+            }
+        }
+
+        saveProgressButton.addEventListener('click', saveStateToBrowser);
+
+        loadState(); // Auto-load from browser on page start
         const { jsPDF } = window.jspdf;
 
         // --- Google API Integration ---
