--- a/index.html
+++ b/index.html
@@ -162,18 +162,18 @@
             <h3 class="text-xl font-semibold text-stone-800 mb-4">2. Vocational Qualifications & Industry Experience</h3>
             <div class="overflow-x-auto"><table class="w-full">
                 <thead class="bg-stone-50"><tr><th class="p-3 text-left text-sm font-semibold text-stone-600">Qualification Name</th><th class="p-3 text-left text-sm font-semibold text-stone-600">Awarding Provider</th><th class="p-3 text-left text-sm font-semibold text-stone-600">Date Awarded</th><th class="p-3"></th></tr></thead>
-                <tbody id="qualifications-body"></tbody></table><button id="add-qualification" class="mt-2 text-sm text-bca-gold hover:text-opacity-80 font-medium">+ Add Qualification</button></div>
+                <tbody id="qualifications-body"></tbody></table><button id="add-qualification" class="mt-2 text-sm text-bca-gold hover:text-opacity-80 font-medium" data-save>+ Add Qualification</button></div>
             <div class="mt-6 overflow-x-auto">
                 <table class="w-full">
                     <thead class="bg-stone-50"><tr><th class="p-3 text-left text-sm font-semibold text-stone-600">Role / Position</th><th class="p-3 text-left text-sm font-semibold text-stone-600">Employer</th><th class="p-3 text-left text-sm font-semibold text-stone-600">Duration</th><th class="p-3"></th></tr></thead>
-                    <tbody id="experience-body" ></tbody>
+                    <tbody id="experience-body" data-save></tbody>
                 </table>
-                <button id="add-experience" class="mt-2 text-sm text-bca-gold hover:text-opacity-80 font-medium" >+ Add Industry Experience</button></div>
+                <button id="add-experience" class="mt-2 text-sm text-bca-gold hover:text-opacity-80 font-medium" data-save>+ Add Industry Experience</button></div>
             <hr class="my-8">
             <h3 class="text-xl font-semibold text-stone-800 mb-4">3. Ongoing Industry Engagement & Currency</h3>
             <div class="overflow-x-auto"><table class="w-full">
                 <thead class="bg-stone-50"><tr><th class="p-3 text-left text-sm font-semibold text-stone-600">Activity Type</th><th class="p-3 text-left text-sm font-semibold text-stone-600">Description</th><th class="p-3 text-left text-sm font-semibold text-stone-600">Date(s)</th><th class="p-3 text-left text-sm font-semibold text-stone-600">Impact on Practice</th><th class="p-3"></th></tr></thead>
-                <tbody id="engagement-body"></tbody></table><button id="add-engagement" class="mt-2 text-sm text-bca-gold hover:text-opacity-80 font-medium">+ Add Engagement Activity</button></div>
+                <tbody id="engagement-body"></tbody></table><button id="add-engagement" class="mt-2 text-sm text-bca-gold hover:text-opacity-80 font-medium" data-save>+ Add Engagement Activity</button></div>
             <hr class="my-8">
             <h3 class="text-xl font-semibold text-stone-800 mb-4">4. VET Professional Development</h3>
             <div class="overflow-x-auto"><table class="w-full">
