Minor Styling Changes

--- a/index.html
+++ b/index.html
@@ -136,19 +136,19 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div>
                     <label for="trainerName" class="block text-sm font-medium text-stone-700" >Trainer Name</label>
-                    <input type="text" id="trainerName" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" data-save>
+                    <input type="text" id="trainerName" class="mt-1 block w-full rounded-md border border-stone-300 shadow-lg p-2 focus:border-teal-500 focus:ring-teal-500" data-save>
                 </div>
                 <div>
                     <label for="trainerDate" class="block text-sm font-medium text-stone-700">Date</label>
-                    <input type="date" id="trainerDate" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" data-save>
+                    <input type="date" id="trainerDate" class="mt-1 block w-full rounded-md border border-stone-300 shadow-lg p-2 focus:border-teal-500 focus:ring-teal-500" data-save>
                 </div>
                 <div>
                     <label for="trainerEmail" class="block text-sm font-medium text-stone-700">Email Address</label>
-                    <input type="email" id="trainerEmail" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" data-save>
+                    <input type="email" id="trainerEmail" class="mt-1 block w-full rounded-md border border-stone-300 shadow-lg p-2 focus:border-teal-500 focus:ring-teal-500" data-save>
                 </div>
                 <div>
                     <label for="trainerPhone" class="block text-sm font-medium text-stone-700">Phone Number</label>
-                    <input type="tel" id="trainerPhone" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" data-save>
+                    <input type="tel" id="trainerPhone" class="mt-1 block w-full rounded-md border border-stone-300 shadow-lg p-2 focus:border-teal-500 focus:ring-teal-500" data-save>
                 </div>
             </div>
             <hr class="my-8">
