--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 
 <template id="unit-card-template">
     <div class="bg-white p-6 rounded-lg shadow-sm unit-card"  data-save-group>
-        <div class="flex justify-between items-start"><input type="text" placeholder="Unit Code and Name, e.g., BSBXCM401" class="unit-title text-lg font-semibold text-stone-800 w-full focus:focus:border-bca-gold bg-transparent">
+        <div class="flex justify-between items-start"><input type="text" placeholder="Unit Code and Name, e.g., BSBXCM401" class="unit-title text-lg font-semibold text-stone-800 w-full focus:focus:border-bca-gold bg-transparent" data-save>
             <button class="text-stone-400 hover:text-red-500 remove-unit-button">&times; Remove</button></div><hr class="my-4">
         <div class="space-y-6">
             <div><h4 class="font-semibold text-stone-800">1. Evidence of Vocational Competency</h4><textarea rows="3" class="voc-comp-evidence mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" placeholder="e.g., I hold this unit of competency..." data-save></textarea></div>
