--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <h3 class="text-xl font-semibold text-stone-800 mb-4">5. Trainer Reflective Statement</h3>
             <div>
                 <label for="reflective-statement" class="block text-sm font-medium text-stone-700">Based on your self-assessment, identify any areas for your own future professional development to further enhance your training and assessment practice.</label>
-                <textarea id="reflective-statement" rows="4" class="mt-1 block w-full rounded-md border border-stone-300 shadow-sm focus:border-teal-500 focus:ring-teal-500" data-save></textarea>
+                <textarea id="reflective-statement" rows="4" class="mt-1 block w-full rounded-md border border-stone-300 shadow-lg focus:border-teal-500 focus:ring-teal-500" data-save></textarea>
             </div>
         </div>
     </section>
@@ -243,19 +243,19 @@
 
 <template id="table-row-template">
     <tr data-save-group>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></td>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></td>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" placeholder="e.g., Jan 2022 - Dec 2023" data-save></td>
+        <td class="p-2 border-b border-stone-200"><textarea rows="1" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold "  data-save></textarea></td>
+        <td class="p-2 border-b border-stone-200"><textarea rows="1" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></textarea></td>
+        <td class="p-2 border-b border-stone-200"><textarea rows="1" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" placeholder="e.g., Jan 2022 - Dec 2023" data-save></textarea></td>
         <td class="p-2 border-b border-stone-200 text-center"><button class="text-stone-400 hover:text-red-500 remove-row-button">&times;</button></td>
     </tr>
 </template>
 
 <template id="table-row-template-wide">
     <tr data-save-group>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></td>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></td>
-        <td class="p-2 border-b border-stone-200"><input type="date" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></td>
-        <td class="p-2 border-b border-stone-200"><input type="text" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></td>
+        <td class="p-2 border-b border-stone-200"><textarea rows="1" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></textarea></td>
+        <td class="p-2 border-b border-stone-200"><textarea rows="1" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></textarea></td>
+        <td class="p-2 border-b border-stone-200"><textarea rows="1" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></textarea></td>
+        <td class="p-2 border-b border-stone-200"><textarea rows="1" class="block w-full rounded-md border border-gray-900 shadow-lg p-2 focus:border-bca-gold focus:ring-bca-gold" data-save></textarea></td>
         <td class="p-2 border-b border-stone-200 text-center"><button class="text-stone-400 hover:text-red-500 remove-row-button">&times;</button></td>
     </tr>
 </template>
@@ -498,7 +498,7 @@
             if(qualifications.length > 0) {
                 report += '<ul>';
                 qualifications.forEach(row => {
-                    const inputs = row.querySelectorAll('input');
+                    const inputs = row.querySelectorAll('textarea');
                     report += `<li>${inputs[0].value || 'N/A'} - ${inputs[1].value || 'N/A'} (${inputs[2].value || 'N/A'})</li>`;
                 });
                 report += '</ul>';
@@ -509,7 +509,7 @@
             if(experiences.length > 0) {
                 report += '<ul>';
                 experiences.forEach(row => {
-                    const inputs = row.querySelectorAll('input');
+                    const inputs = row.querySelectorAll('textarea');
                     report += `<li>${inputs[0].value || 'N/A'} at ${inputs[1].value || 'N/A'} (${inputs[2].value || 'N/A'})</li>`;
                 });
                 report += '</ul>';
@@ -520,7 +520,7 @@
             if(engagements.length > 0) {
                 report += '<ul>';
                 engagements.forEach(row => {
-                    const inputs = row.querySelectorAll('input');
+                    const inputs = row.querySelectorAll('textarea');
                     report += `<li><strong>${inputs[0].value || 'N/A'}:</strong> ${inputs[1].value || 'N/A'} (${inputs[2].value || 'N/A'}). <strong>Impact:</strong> ${inputs[3].value || 'N/A'}</li>`;
                 });
                 report += '</ul>';
@@ -531,7 +531,7 @@
             if(vetPds.length > 0) {
                 report += '<ul>';
                 vetPds.forEach(row => {
-                    const inputs = row.querySelectorAll('input');
+                    const inputs = row.querySelectorAll('textarea');
                     report += `<li><strong>${inputs[0].value || 'N/A'}:</strong> ${inputs[1].value || 'N/A'} (${inputs[2].value || 'N/A'}). <strong>Impact:</strong> ${inputs[3].value || 'N/A'}</li>`;
                 });
                 report += '</ul>';
