Made changes to how the page loads tailwind

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
+    <link href="./dist/output.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Trainer & Assessor Matrix</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" xintegrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibyoVBL5gI9kLmbG0CbnwFDEr4X1HarA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
@@ -36,25 +36,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <!-- Custom Tailwind Configuration -->
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        'bca-red': '#d51f2e',
-                        'bca-gold': '#c39137',
-                        'bca-beige': '#eee6d4',
-                        'bca-soft-white': '#f4f0ec',
-                    },
-                    fontFamily: {
-                        'spartan': ['"League Spartan"', 'sans-serif'],
-                        'roboto': ['"Roboto"', 'sans-serif'],
-                    }
-                }
-            }
-        }
-    </script>
     
 </head>
 <body class="bg-bca-soft-white text-stone-800 font-roboto">
